Clean up layout issue on errors

--- a/frontend/src/__generated/index.css
+++ b/frontend/src/__generated/index.css
@@ -6523,9 +6523,7 @@ body {
   border-radius: 4px;
   display: flex;
   height: 100%;
-  margin-left: 0;
   overflow-y: scroll;
-  width: 100%;
 }
 ._75g8nf4 {
   display: flex;
@@ -7228,7 +7226,7 @@ body {
 }
 ._1gpgayi3 {
   background: #fdfcfd;
-  border: 1px solid #e4e2e4;
+  border: var(--_1pyqka9k) solid 1px;
   border-radius: 6px;
   box-shadow: 0 2px 8px -2px rgba(59, 59, 59, 0.08);
   overflow: clip;
